# crate_glitch

./: .gitignore  Cargo.toml  GEMINI.md  README.md  config.yaml.template  justfile  rust-toolchain.toml
.github/workflows/: rust.yml
src/: main.rs
