[package]
name = "crate_glitch"
version = "0.2.0"
authors = ["blakehawkins"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "matrix.org bot to provide links based on pattern matching"
homepage = "https://github.com/blakehawkins/crate_glitch"
documentation = "https://docs.rs/crate_glitch/"
repository = "https://github.com/blakehawkins/crate_glitch"
readme = "README.md"

[dependencies]
anyhow = "1.0"
matrix-sdk = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"
tokio = { version = "1.47", features = ["full"] }
urlencoding = "2.1"
